idea/testData/multiModuleLineMarker/expectEnumEntries/common/common.kt
package test

expect enum class <!LINE_MARKER("descr='Has actuals in JVM'")!>Enum<!> {
    <!LINE_MARKER("descr='Has actuals in JVM'")!>A<!>,
    <!LINE_MARKER("descr='Has actuals in JVM'")!>B<!>,
    <!LINE_MARKER("descr='Has actuals in JVM'")!>C<!>
}